# mlx-finetune

./: .gitignore  README.md  load_data.py  pyproject.toml
lora/: __main__.py
lora/core/: _lora.py  models.py
notebook/: fine-tuning.ipynb  load_data.py  lora-finetuning.ipynb
notebook/lora/: __init__.py  __main__.py
notebook/lora/core/: __init__.py  utils.py
notebook/rag_vs_finetuning/: example_1.ipynb  example_2.ipynb
