[project]
name = "finetune-macbook"
version = "0.1.0"
description = "Finetune LLMs and SLMs using Apple's Silicon Macbook"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.2.0",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "mlx-lm>=0.28.2",
    "pydantic>=2.12.1",
]
