[project]
name = "finetune-macbook"
version = "0.1.0"
description = "Finetune LLMs and SLMs using Apple's Silicon Macbook"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.2.0",
    "ipywidgets>=8.1.7",
    "jq>=1.10.0",
    "jupyter>=1.1.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.1",
    "langchain-openai>=1.0.1",
    "langchain-postgres>=0.0.16",
    "mlx-lm>=0.28.2",
    "psycopg2>=2.9.11",
    "pydantic>=2.12.1",
    "python-dotenv>=1.2.1",
    "torch>=2.9.0",
]
